stuck at key sen inconsistances

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,23 +703,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TimeoutException",
-     "evalue": "Message: \n",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-7fd2539b71cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menvironment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-0528602ed601>\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    115\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayAction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#to start the game\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbrowser_wait\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muntil\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_css_selector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".monitor_value_3Yexa\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbrowser_html_element\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"p\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/selenium/webdriver/support/wait.py\u001b[0m in \u001b[0;36muntil\u001b[0;34m(self, method, message)\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mend_time\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mTimeoutException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0muntil_not\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTimeoutException\u001b[0m: Message: \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "e = environment()\n",
     "try:\n",
@@ -732,40 +718,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Inconsistant key sends](https://github.com/hakanonal/geodashml/projects/1#card-37424332)"
+    "### [Inconsistant key sends](https://github.com/hakanonal/geodashml/projects/1#card-37424332)\n",
+    "\n",
+    "04.05.2020 - New day brings new energy...\n",
+    "\n",
+    "- First I will check if there is an alternative for selenium. [Mechanize](https://mechanize.readthedocs.io/en/latest/index.html) may be an option. But before moving forward I want to spent some more time to staring the last code that I have written so far.\n",
+    "- What about trying different element to send keys. how about body. or something else. Moreover I must find a way to prove that the keys are actually being send %100 percent every time.\n",
+    "- body element also seems to reponse to key sends but again it is not consistant.\n",
+    "- while reading [this](https://www.selenium.dev/documentation/en/webdriver/web_element/) I have see there is switch_to directive. Maybe it is loosing some kind of focus/activeness that's way key sends may be lost in between. I will play arround a little bit in this area.\n",
+    "- One more idea in this [keyboard](https://www.selenium.dev/documentation/en/webdriver/keyboard/) page it gives example about keydown and keyup. Maybe sending the space key is since it is side key not a letter it should be used with keyup and keydown. by the way starting from begening of the game if I keep pressing the space bar I go way too much in the game. I will try to keep pressing key. After that I will try actions as mentioned in the [document](https://www.selenium.dev/documentation/en/webdriver/keyboard/) \n",
+    "- Well pressing the space key all the time seems to be working. And eventhoug I did not give an element to press.\n",
+    "- I will try key_down and key_up againto simulate sending the space key\n",
+    "- I have converted the p key to action. However space key to start the game did nor work this time.\n",
+    "- I will try this activeness thing...\n",
+    "- I am currentlly trying almost all methods and attributes of the selenium library. doing lot's of things that I do not have patience to write it down.\n",
+    "- I have spent way to much time on this stupid thing, where we are very far away from project's goal.\n",
+    "- By reading [this](https://mechanize.readthedocs.io/en/latest/faq.html#javascript-is-messing-up-my-web-scraping-what-do-i-do) ı immediatlly this won't work for me also. because I will not be able to execute javasciprt nor scrath.\n",
+    "- So far in out project we did not come to a point that we did not start to train our model yet. I am still trying to solidized the environment. So I am stuck here. If you have any idea it would be much appricaited from this point."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "init\ngreen flag loaded...\ngreen flag clicked...\nwaited...\nscoreboard appeared...\nstarted the game\n0\npaused 0\nunpaused 0\n1\npaused 1\nunpaused 1\n2\npaused 2\nunpaused 2\n3\npaused 3\nunpaused 3\n4\npaused 4\nunpaused 4\n5\npaused 5\nunpaused 5\n6\npaused 6\nunpaused 6\n7\npaused 7\nunpaused 7\n8\npaused 8\nunpaused 8\n9\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-001425aa45b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m         \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_tag_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"html\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"p\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"paused %d\"\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "text": "init\ngreen flag loaded...\ngreen flag clicked...\nwaiting...\nwait done!\nstarted the game\n0\npaused\n1\nunpaused\n2\npaused\n3\nunpaused\n4\npaused\n5\nunpaused\n6\npaused\n7\nunpaused\n8\npaused\n9\nunpaused\n10\npaused\n11\nunpaused\n12\npaused\n13\nunpaused\n14\npaused\n15\nunpaused\n16\npaused\n17\nunpaused\n18\npaused\n19\nunpaused\n20\npaused\n21\nunpaused\n22\npaused\n23\nunpaused\n24\npaused\n25\nunpaused\n26\npaused\n27\nunpaused\n28\npaused\n29\nunpaused\n30\npaused\n31\nunpaused\n32\npaused\n33\nunpaused\n34\npaused\n35\nunpaused\n36\npaused\n37\nunpaused\n38\npaused\n39\nunpaused\n40\npaused\n41\nunpaused\n42\npaused\n43\nunpaused\n44\npaused\n45\nunpaused\n46\npaused\n47\nunpaused\n48\npaused\n49\nunpaused\n50\npaused\n51\nunpaused\n52\npaused\n53\nunpaused\n54\npaused\n55\nunpaused\n56\npaused\n57\nunpaused\n58\npaused\n59\nunpaused\n60\npaused\n61\nunpaused\n62\npaused\n63\nunpaused\n64\npaused\n65\nunpaused\n66\npaused\n67\nunpaused\n68\npaused\n69\nunpaused\n70\npaused\n71\nunpaused\n72\npaused\n73\nunpaused\n74\npaused\n75\nunpaused\n76\npaused\n77\nunpaused\n78\npaused\n79\nunpaused\n80\npaused\n81\nunpaused\n82\npaused\n83\nunpaused\n84\npaused\n85\nunpaused\n86\npaused\n87\nunpaused\n88\npaused\n89\nunpaused\n90\npaused\n91\nunpaused\n92\npaused\n93\nunpaused\n94\npaused\n95\nunpaused\n96\npaused\n97\nunpaused\n98\npaused\n99\nunpaused\n"
     }
    ],
    "source": [
     "from selenium import webdriver\n",
     "from IPython.display import Image\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions\n",
+    "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "import time\n",
     "\n",
     "options = webdriver.ChromeOptions()\n",
-    "options.add_argument('headless')\n",
+    "#options.add_argument('headless')\n",
     "driver = webdriver.Chrome(executable_path=\"/usr/local/bin/chromedriver\", chrome_options=options)\n",
     "\n",
     "try:\n",
@@ -775,32 +768,34 @@
     "    wait.until(lambda d: d.find_element_by_css_selector(\".stage_green-flag-overlay_gNXnv img\")) #wait until green flag appears\n",
     "    print(\"green flag loaded...\")\n",
     "\n",
-    "    flag_element = driver.find_element_by_css_selector(\".stage_green-flag-overlay_gNXnv img\")\n",
+    "    flag_element = driver.find_element_by_css_selector(\".stage_green-flag-overlay_gNXnv\")\n",
+    "    wait.until(expected_conditions.element_to_be_clickable((By.CSS_SELECTOR,\".stage_green-flag-overlay_gNXnv\")))\n",
     "    flag_element.click()\n",
     "    print(\"green flag clicked...\")\n",
+    "    print(\"waiting...\")\n",
     "    time.sleep(10)\n",
-    "    print(\"waited...\")\n",
+    "    print(\"wait done!\")\n",
     "\n",
-    "    wait.until(lambda d: d.find_element_by_css_selector(\".monitor_monitor-container_2J9gl\")) #wait until score board appears\n",
-    "    print(\"scoreboard appeared...\")\n",
-    "\n",
-    "    driver.find_element_by_tag_name(\"html\").send_keys(Keys.SPACE)\n",
+    "    body = driver.find_element_by_tag_name(\"body\")\n",
+    "    #canvas_div = driver.find_element_by_css_selector(\".stage_stage_1fD7k\")\n",
+    "    #wait.until(expected_conditions.element_to_be_clickable((By.CSS_SELECTOR,\".stage_stage_1fD7k\")))\n",
+    "    #canvas_div.click()\n",
+    "    space_action = webdriver.ActionChains(driver).key_down(Keys.SPACE).key_up(Keys.SPACE)\n",
+    "    space_action.perform()\n",
     "    print(\"started the game\")\n",
     "    wait.until(lambda d: d.find_element_by_css_selector(\".monitor_value_3Yexa\")) #wait until score monitor element appears. \n",
     "\n",
-    "    driver.find_element_by_tag_name(\"html\").send_keys(\"p\")\n",
-    "\n",
+    "    flag = 1\n",
     "    for i in range(100):\n",
     "        print(i)\n",
-    "        time.sleep(5)\n",
-    "        driver.find_element_by_tag_name(\"html\").send_keys(\"p\")\n",
-    "        print(\"paused %d\"%i)\n",
-    "        time.sleep(5)\n",
-    "        driver.find_element_by_tag_name(\"html\").send_keys(Keys.SPACE)\n",
-    "        time.sleep(5)\n",
-    "        driver.find_element_by_tag_name(\"html\").send_keys(\"p\")\n",
-    "        print(\"unpaused %d\"%i)\n",
-    "    \n",
+    "        driver.switch_to_window(driver.current_window_handle)\n",
+    "        body.send_keys(\"p\")\n",
+    "        if flag == 1:\n",
+    "            print(\"paused\")\n",
+    "        else:\n",
+    "            print(\"unpaused\")\n",
+    "        flag *= -1            \n",
+    "        time.sleep(1)\n",
     "\n",
     "finally:\n",
     "    #print(\"ok\")\n",
